[package]
name = "asgi_only"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "asgi_only"
crate-type = ["cdylib"]

[dependencies]
axum = "0.8.3"
parviocula = { version = "0.0.4", path = "../..", features = ["extension-module", "axum"] }
pyo3 = { version = "0.24.1", features = ["extension-module"] }
tokio = "1.44.2"
tower = { version = "0.5.2", features = ["tokio"] }
